# kime

src/daemon/indicator/: Cargo.toml
src/engine/backend/src/: keycode.rs  keymap.rs
src/engine/config/src/: lib.rs
src/engine/core/: Cargo.toml
src/engine/core/src/: config.rs  lib.rs
src/frontends/xim/: Cargo.toml  build.rs  wrapper.h
src/frontends/xim/src/: main.rs  pe_window.rs
src/tools/check/: Cargo.toml
src/tools/check/src/: main.rs
