[package]
name = "kime-xim"
description = "Kime XIM server"
version = "0.3.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
kime-engine-cffi = { path = "../../engine/cffi" }
kime-version = { path = "../../version" }

# cairo-rs = { version = "0.9.1", features = ["xcb"] }
log = "0.4.11"
simplelog = "0.9.0"
pico-args = "0.4.0"
libc = "0.2.85"

[build-dependencies]
bindgen = "0.57.0"
